# mozika_scraper_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
